nohup.out
  File "app.py", line 34
    def celery_make_model(request.args):
                                 ^
SyntaxError: invalid syntax
  File "app.py", line 149
    task = celery_make_model(request.args)
                                         ^
IndentationError: unindent does not match any outer indentation level
  File "app.py", line 149
    task = celery_make_model(request.args)
                                         ^
IndentationError: unindent does not match any outer indentation level
/home/ubuntu/.local/lib/python3.6/site-packages/OpenSSL/_util.py:6: CryptographyDeprecationWarning: Python 3.6 is no longer supported by the Python core team. Therefore, support for it is deprecated in cryptography and will be removed in a future release.
  from cryptography.hazmat.bindings.openssl.binding import Binding
2022-11-16 08:33:12.752934: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ubuntu/.local/lib/python3.6/site-packages/cv2/../../lib64:
2022-11-16 08:33:12.752985: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.
Traceback (most recent call last):
  File "app.py", line 3, in <module>
    from s3 import s3_connection, s3_put_object, s3_get_object,s3_get_alldataset,s3_get_signupuser_dataset
  File "/home/ubuntu/Kiosk-Flask/s3.py", line 5, in <module>
    from newlogin import flasklogin
  File "/home/ubuntu/Kiosk-Flask/newlogin.py", line 11, in <module>
    load_model = load_model("face_model.h5")
  File "/home/ubuntu/.local/lib/python3.6/site-packages/keras/saving/save.py", line 205, in load_model
    return saved_model_load.load(filepath, compile, options)
  File "/home/ubuntu/.local/lib/python3.6/site-packages/keras/saving/saved_model/load.py", line 108, in load
    meta_graph_def = tf.__internal__.saved_model.parse_saved_model(path).meta_graphs[0]
  File "/home/ubuntu/.local/lib/python3.6/site-packages/tensorflow/python/saved_model/loader_impl.py", line 121, in parse_saved_model
    constants.SAVED_MODEL_FILENAME_PB))
OSError: SavedModel file does not exist at: face_model.h5/{saved_model.pbtxt|saved_model.pb}
/home/ubuntu/.local/lib/python3.6/site-packages/OpenSSL/_util.py:6: CryptographyDeprecationWarning: Python 3.6 is no longer supported by the Python core team. Therefore, support for it is deprecated in cryptography and will be removed in a future release.
  from cryptography.hazmat.bindings.openssl.binding import Binding
2022-11-16 08:43:14.507721: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ubuntu/.local/lib/python3.6/site-packages/cv2/../../lib64:
2022-11-16 08:43:14.507773: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.
/home/ubuntu/.local/lib/python3.6/site-packages/keras/layers/core.py:1045: UserWarning: inception_resnet_v1_lcl is not loaded, but a Lambda layer uses it. It may cause errors.
  , UserWarning)
2022-11-16 08:43:16.502139: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ubuntu/.local/lib/python3.6/site-packages/cv2/../../lib64:
2022-11-16 08:43:16.502187: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)
2022-11-16 08:43:16.502210: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (ip-172-31-38-10): /proc/driver/nvidia/version does not exist
2022-11-16 08:43:16.502438: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA
To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.
/usr/local/lib/python3.6/dist-packages/boto3/compat.py:88: PythonDeprecationWarning: Boto3 will no longer support Python 3.6 starting May 30, 2022. To continue receiving service updates, bug fixes, and security updates please upgrade to Python 3.7 or later. More information can be found here: https://aws.amazon.com/blogs/developer/python-support-policy-updates-for-aws-sdks-and-tools/
  warnings.warn(warning, PythonDeprecationWarning)
s3 bucket connected!
 * Serving Flask app 'app' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on all addresses.
   WARNING: This is a development server. Do not use it in a production deployment.
 * Running on http://172.31.38.10:5000/ (Press CTRL+C to quit)
154.26.136.165 - - [16/Nov/2022 09:13:29] "GET /v2/ HTTP/1.1" 404 -
154.26.136.165 - - [16/Nov/2022 09:14:03] "GET /v2/ HTTP/1.1" 404 -
198.235.24.14 - - [16/Nov/2022 20:07:57] "GET / HTTP/1.1" 200 -
192.241.197.157 - - [16/Nov/2022 21:40:43] "GET /v2/ HTTP/1.1" 404 -
154.26.136.165 - - [17/Nov/2022 01:30:50] "GET /v2/ HTTP/1.1" 404 -
154.26.136.165 - - [17/Nov/2022 01:31:21] "GET /v2/ HTTP/1.1" 404 -
198.235.24.26 - - [17/Nov/2022 01:37:54] "GET / HTTP/1.0" 200 -
